--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "homepage": "https://gustavonovaes.github.io/spa-parcel-react",
   "scripts": {
     "dev": "parcel ./public/index.html",
-    "build": "parcel build ./public/index.html --no-cache --out-dir dist/"
+    "build": "parcel build ./public/index.html --no-cache --out-dir dist/",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
+    "gh-pages": "^2.1.1",
     "parcel-bundler": "^1.12.4"
   },
   "dependencies": {
