--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "source-map-explorer": "^2.1.0"
   },
   "dependencies": {
+    "chart.js": "^2.8.0",
     "react": "^16.10.2",
+    "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
     "styled-components": "^5.0.0-beta.9"
