--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "dev": "parcel ./public/index.html",
     "prebuild": "rm -rf dist",
-    "build": "parcel build ./public/index.html --no-cache --out-dir dist/",
-    "predeploy": "parcel build ./public/index.html --no-cache --out-dir dist/ --public-url '.'",
+    "build": "parcel build ./public/index.html --no-cache --out-dir dist/ --public-url '.'",
+    "predeploy": "yarn build",
     "deploy": "gh-pages -d dist",
     "analyze": "source-map-explorer dist/*.js"
   },
